Implemented tags moved classes to their folders